make it Java8 compatible